# ai_watcher

./: .gitignore  README.md  pyproject.toml
docs/: ARCHITECTURE.md
examples/: prompt.md  python_inventory_workflow.yaml  sample_workflow.yaml
examples/scripts/: build_python_report.py
src/ai_watcher/: __init__.py  cli.py  context.py  executor.py  graph.py  issues.py  load.py  reporting.py  schema.py  templates.py
src/ai_watcher/steps/: __init__.py  base.py  command.py  copilot_sdk.py  external_cli.py  script.py
tests/: test_cli.py  test_executor.py  test_graph.py  test_load.py  test_reporting.py  test_schema.py  test_templates.py
